--- a/assets/css/product-2.css
+++ b/assets/css/product-2.css
@@ -89,6 +89,12 @@
   color: #2D2D2D;
 }
 
+.box-yellow-title {
+  font-size: 32px;
+  font-weight: bold;
+  color: #2D2D2D;
+}
+
 @media screen and (max-width: 768px) {
   .box-yellow-box img {
     margin-top: 20px;
